<resources>
    <string name="app_name">ParkinGenie</string>

    <string-array name="CarParks">
        <item>Parnell St</item>
        <item>Ilac centre</item>
        <item>Henry St</item>
        <item>Pavilion</item>
        <item>IFSC</item>
        <item>SmithField</item>
        <item>Swords Central</item>
    </string-array>
    <string name="enter_carpark_website">Website</string>
    <string name="Name">Name</string>
    <string name="Website">Website</string>
    <string name="Address">Address</string>
    <string name="Phone">Phone</string>
    <string name="GPS">GPS coordinates</string>
    <string name="TSpaces">Total Spaces</string>
    <string name="FSpaces">Free Spaces</string>
    <string name="Height">Height Restriction</string>
    <string name="Payment">Payment Methods</string>
    <string name="Tariff">Tariff</string>
    <string name="Opening">Opening Times</string>
    <string name="enter_name">Enter car park name</string>
    <string name="button_add">Add Car Park</string>
    <string name="button_find">Find Car Park</string>
    <string-array name="OwnerCarParks">
        <item>carParks</item>
    </string-array>
</resources>
